# portfolio-backtester

./: .gitignore  .namespace-export-trigger  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  diagnose-maintainability.yml  migration-source-export.yml  namespace-source-export-pr.yml  namespace-source-export.yml  namespace-validation.yml  owner-native-namespace-migration-v2.yml  owner-native-namespace-migration-v3.yml  owner-native-namespace-migration-v4.yml  owner-native-namespace-migration.yml  tests.yml
docs/: README.md  accounting_execution_roadmap.md  framework-integration-ledger.yml  namespace-migration.md  ownership-migration.md  testing.md
docs/concepts/: afml-sizing-and-risk.md  backend-architecture.md  backtest-backends.md  backtest-spec.md  cost-breakdown.md  execution-costs.md  style-replica-portfolio.md  turnover.md
docs/guides/: entry-points.md  execution-simulation.md  incumbent-requalification-oos-controls.md  incumbent-requalification.md
docs/internal/: namespace-migration-blockers.json  namespace-migration-evidence.json
docs/products/: daily-watch20.md
docs/reference/: public-api.md
docs/reference/outputs/: positions.md
scripts/dev/: maintainability_metrics.py  namespace_boundary.py  run_tests.sh
src/cstree/: __init__.py
src/cstree/backtesting/: __init__.py  a_share_executable_oos_topk.py  api.py  backends.py  backtest_spec.py  benchmark_ladder.py  benchmarking.py  capacity.py  capacity_report.py  capacity_report_support.py  construction_grid.py  contracts.py  daily_watch20.py  engine.py  evaluation.py  execution.py  execution_calendar.py  exposure.py  freshness_overlay.py  leg_helpers.py  metrics.py  parity.py  period_outputs.py  portfolio.py  portfolio_positions.py  portfolio_weights.py  position_backtest.py  position_backtest_cli.py  position_postprocess.py  pricing.py  rebalance.py  reporting.py  strategy.py  style_replica_portfolio.py  tearsheet.py  topk_context.py  turnover_attribution.py  types.py
src/cstree/backtesting/execution_sim/: __init__.py  core.py  results.py
src/cstree/backtesting/integrations/: __init__.py  lean.py  qlib.py
src/cstree/backtesting/products/: __init__.py  daily_watch20.py
src/portfolio_backtester/: __init__.py  _symbol_utils.py  a_share_round_lot.py  a_share_round_lot_diagnostics.py  api.py  backtest_spec.py  benchmarking.py  bet_sizing.py  capacity_report.py  construction_grid.py  construction_grid_reports.py  contracts.py  daily_watch20.py  daily_watch20_oos.py  daily_watch20_policy.py  engine.py  evaluation.py  evidence_receipts.py  execution_calendar.py  execution_contracts.py  execution_summary.py  exposure.py  exposure_screen.py  freshness_overlay.py  holding_selection.py  hrp.py  incumbent_requalification.py  incumbent_requalification_oos.py  leg_helpers.py  liquidity_proxy.py  metrics.py  period_outputs.py  period_turnover.py  periods.py  portfolio.py  portfolio_position_frames.py  portfolio_position_options.py  portfolio_positions.py  portfolio_selection.py  portfolio_weights.py  (+21 more)
src/portfolio_backtester/backends/: __init__.py  base.py  native.py
src/portfolio_backtester/execution_sim/: config.py
tests/: conftest.py  test_a_share_executable_oos_topk.py  test_a_share_round_lot.py  test_a_share_round_lot_diagnostics.py  test_afml_portfolio.py  test_backtest.py  test_backtest_backends.py  test_backtest_parity.py  test_backtest_reporting.py  test_backtest_spec.py  test_backtest_tearsheet.py  test_benchmark_ladder.py  test_benchmarking.py  test_capacity_report.py  test_construction_grid.py  test_contracts.py  test_cost_breakdown.py  test_daily_watch20.py  test_daily_watch20_oos_owner.py  test_documentation_entrypoints.py  test_evaluation_selection_control_forwarding.py  test_execution.py  test_execution_calendar.py  test_execution_contracts.py  test_execution_sim.py  test_exposure_screen.py  test_external_strategy_smoke.py  test_framework_integration_ledger.py  test_freshness_overlay.py  test_incumbent_requalification.py  test_incumbent_requalification_oos_contract.py  test_incumbent_requalification_public_api.py  test_lean_golden_exchange.py  test_liquidity_proxy.py  test_maintainability_metrics.py  test_metrics.py  test_namespace_migration.py  test_package_smoke.py  test_portfolio_liquidity_weighting.py  test_portfolio_selection_control_duplicates.py  (+17 more)
tests/fixtures/backends/: liquid_long_only.expected.json
tests/fixtures/lean/: a_share_delayed_exit.native-result.json  a_share_delayed_exit.scenario.json
typings/pandas/: __init__.pyi
