[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.1.0"
description = "Portfolio construction and backtesting tooling for research-workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "market-data-platform>=0.1.0",
  "numpy>=1.23",
  "pandas>=2.0",
  "pyarrow>=23.0.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.39.9",
  "pytest>=9.0.3",
  "ruff>=0.8",
  "ty>=0.0.55",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cstree", "cstree.backtesting*"]

[tool.uv.sources]
market-data-platform = { path = "../market-data-platform", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "RUF", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.src]
include = ["src/cstree/backtesting/types.py"]
exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]

[tool.basedpyright]
include = ["src/cstree/backtesting/types.py"]
exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
