[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.1.0"
description = "Reusable portfolio construction and research backtesting toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pyarrow>=23.0.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.39.9",
  "pytest>=9.0.3",
  "ruff>=0.8",
  "ty>=0.0.55",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cstree", "cstree.backtesting*"]


[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "RUF", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.src]
include = ["src/cstree/backtesting/types.py"]
exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]

[tool.basedpyright]
include = [
  "src/cstree/__init__.py",
  "src/cstree/backtesting/__init__.py",
  "src/cstree/backtesting/capacity.py",
  "src/cstree/backtesting/period_outputs.py",
  "src/cstree/backtesting/portfolio.py",
  "src/cstree/backtesting/reports.py",
  "src/cstree/backtesting/types.py",
  "src/cstree/backtesting/execution_sim/__init__.py",
  "src/cstree/backtesting/execution_sim/results.py",
]
stubPath = "typings"
exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
