[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.4.0"
description = "Reusable portfolio construction and research backtesting toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pyarrow>=23.0.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.8",
  "ty>=0.0.55",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["portfolio_backtester", "portfolio_backtester.*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "RUF", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["portfolio_backtester"]

[tool.ty.src]
include = [
  "src/portfolio_backtester/__init__.py",
  "src/portfolio_backtester/api.py",
  "src/portfolio_backtester/backtest_spec.py",
  "src/portfolio_backtester/capacity.py",
  "src/portfolio_backtester/execution_sim/__init__.py",
  "src/portfolio_backtester/execution_sim/results.py",
  "src/portfolio_backtester/period_outputs.py",
  "src/portfolio_backtester/portfolio.py",
  "src/portfolio_backtester/reports.py",
  "src/portfolio_backtester/types.py",
]
exclude = [
  ".venv",
  "artifacts",
  "build",
  "dist",
  "outputs",
]
